--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.5",
-    "bootstrap-icons": "^1.11.3"
+    "bootstrap-icons": "^1.11.3",
+    "marked": "^15.0.12"
   },
   "devDependencies": {
     "sass": "^1.86.3",
+    "typescript": "^5.8.3",
     "vite": "^6.3.2"
   }
 }
